<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.githubusers.android.presentation.user.profile.UserProfileViewModel" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_no_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:gravity="center"
                android:text="@string/label_no_connection"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="@{viewModel.hasConnection ? View.GONE : View.VISIBLE}"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/cover"
                android:layout_width="0dp"
                android:layout_height="@dimen/cover_photo_height"
                android:scaleType="centerCrop"
                app:imageUrl="@{viewModel.userLiveData.user.avatarUrl}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_no_connection" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photo"
                android:layout_width="@dimen/profile_photo_size"
                android:layout_height="@dimen/profile_photo_size"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:imageUrl="@{viewModel.userLiveData.user.avatarUrl}"
                app:layout_constraintBottom_toBottomOf="@+id/cover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cover"
                app:layout_constraintVertical_bias="0.45" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{String.valueOf(viewModel.userLiveData.user.followers)}"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.13"
                app:layout_constraintStart_toEndOf="@+id/photo"
                app:layout_constraintTop_toBottomOf="@+id/cover"
                tools:text="13,000" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/label_followers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.138"
                app:layout_constraintStart_toEndOf="@+id/photo"
                app:layout_constraintTop_toBottomOf="@+id/tv_followers" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{String.valueOf(viewModel.userLiveData.user.following)}"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.594"
                app:layout_constraintStart_toEndOf="@+id/photo"
                app:layout_constraintTop_toBottomOf="@+id/cover"
                tools:text="400" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/label_following"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.69"
                app:layout_constraintStart_toEndOf="@+id/photo"
                app:layout_constraintTop_toBottomOf="@+id/tv_following" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.userLiveData.user.name}"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold"
                android:visibility="@{viewModel.userLiveData.user.name == null ? View.GONE : View.VISIBLE}"
                app:layout_constraintStart_toStartOf="@+id/photo"
                app:layout_constraintTop_toBottomOf="@+id/photo"
                tools:text="Johny Smith" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.userLiveData.user.login}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                tools:text="JohnyS" />

            <LinearLayout
                android:id="@+id/ll_email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/profile_vertical_margin"
                android:layout_marginEnd="@dimen/profile_vertical_margin"
                android:orientation="vertical"
                android:visibility="@{viewModel.userLiveData.user.email == null ? View.GONE : View.VISIBLE}"
                app:layout_constraintTop_toBottomOf="@+id/tv_username">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/profile_horizontal_margin"
                    android:background="@color/gray" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/profile_horizontal_margin"
                    android:text="@string/label_email"
                    android:textColor="@color/colorAccent"
                    android:textSize="13sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@{viewModel.userLiveData.user.email}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="johnsmith@gmail.com" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll__company_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/profile_vertical_margin"
                android:layout_marginEnd="@dimen/profile_vertical_margin"
                android:orientation="vertical"
                android:visibility="@{viewModel.userLiveData.user.company == null ? View.GONE : View.VISIBLE}"
                app:layout_constraintTop_toBottomOf="@+id/ll_email_container">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/profile_horizontal_margin"
                    android:background="@color/gray" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/profile_horizontal_margin"
                    android:text="@string/label_company"
                    android:textColor="@color/colorAccent"
                    android:textSize="13sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@{viewModel.userLiveData.user.company}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="Smith and Co." />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_location_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/profile_vertical_margin"
                android:layout_marginEnd="@dimen/profile_vertical_margin"
                android:orientation="vertical"
                android:visibility="@{viewModel.userLiveData.user.location == null ? View.GONE : View.VISIBLE}"
                app:layout_constraintTop_toBottomOf="@+id/ll__company_container">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/profile_horizontal_margin"
                    android:background="@color/gray" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/profile_horizontal_margin"
                    android:text="@string/label_location"
                    android:textColor="@color/colorAccent"
                    android:textSize="13sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@{viewModel.userLiveData.user.location}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="USA" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/profile_horizontal_margin"
                    android:background="@color/gray" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppMaterial.EditText.Outlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/profile_vertical_margin"
                android:layout_marginTop="@dimen/profile_horizontal_margin"
                android:layout_marginEnd="@dimen/profile_vertical_margin"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:hint="@string/label_note"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_location_container"
                app:startIconDrawable="@drawable/note">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:text='@{viewModel.userLiveData.user.note ?? ""}' />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
